[package]
name = "distuss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "1.0.5"
serenity = { version = "0.11.6", default-features = false, features = ["rustls_backend", "builder", "client", "gateway", "model"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
