[package]
name = "distuss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0", default-features = false, features = ["html", "macro"] }
dioxus-ssr = "0.4.0"
headless_chrome = "1.0.5"
minify-html = "0.11.1"
pulldown-cmark = "0.9.3"
serenity = { version = "0.11.6", default-features = false, features = ["rustls_backend", "builder", "client", "gateway", "model", "chrono", "cache"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
